增加底层框架类

--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.EFCore/MyChy.Frame.Core.EFCore.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.EFCore/MyChy.Frame.Core.EFCore.csproj
@@ -11,6 +11,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\MyChy.Frame.Core.Common\MyChy.Frame.Core.Common.csproj" />
+    <ProjectReference Include="..\MyChy.Frame.Core\MyChy.Frame.Core.csproj" />
   </ItemGroup>
 
 </Project>
