--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <Version>1.0.2</Version>
+    <Version>1.0.4</Version>
     <AssemblyVersion>1.0.2.0</AssemblyVersion>
     <FileVersion>1.0.2.0</FileVersion>
-    <Description>移除底层框架内容</Description>
+    <Description>增加 JsonConverters</Description>
   </PropertyGroup>
 
   <ItemGroup>
@@ -19,6 +19,7 @@
     <PackageReference Include="Microsoft.Extensions.DependencyModel" Version="1.1.1" />
     <PackageReference Include="Microsoft.Extensions.Logging" Version="1.1.1" />
     <PackageReference Include="Newtonsoft.Json" Version="10.0.2" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
     <PackageReference Include="System.Text.Encoding.CodePages" Version="4.3.0" />
   </ItemGroup>
 
