--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.EFCore/MyChy.Frame.Core.EFCore.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.EFCore/MyChy.Frame.Core.EFCore.csproj
@@ -2,13 +2,16 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <Version>1.0.1</Version>
-    <Description>更新引用增加框架DLL</Description>
+    <Version>1.0.5</Version>
+    <Description>增加UpdatedBy三个默认值</Description>
+    <AssemblyVersion>1.0.5.0</AssemblyVersion>
+    <FileVersion>1.0.5.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="1.1.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="1.1.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="1.1.2" />
   </ItemGroup>
 
   <ItemGroup>
