--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core/MyChy.Frame.Core.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core/MyChy.Frame.Core.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <Version>1.0.3</Version>
-    <Description>增加  MyChy.Frame.Core.Modules.Builder</Description>
+    <Version>1.0.4</Version>
+    <Description>增加  AutoMapper</Description>
   </PropertyGroup>
 
   <ItemGroup>
