--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Redis/MyChy.Frame.Core.Redis.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Redis/MyChy.Frame.Core.Redis.csproj
@@ -2,10 +2,12 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
+    <Version>1.0.1</Version>
+    <Description>升级Nuget引用</Description>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="StackExchange.Redis" Version="1.2.3" />
+    <PackageReference Include="StackExchange.Redis" Version="1.2.4" />
   </ItemGroup>
 
   <ItemGroup>
