--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core/MyChy.Frame.Core.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core/MyChy.Frame.Core.csproj
@@ -2,8 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp1.1</TargetFramework>
-    <Version>1.0.6</Version>
-    <Description>增加 ClaimsIdentityServer</Description>
+    <Version>1.0.8</Version>
+    <Description>增加 ModuleInitializer</Description>
   </PropertyGroup>
 
   <ItemGroup>
