--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web2/MyChy.Frame.Core.Web2.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web2/MyChy.Frame.Core.Web2.csproj
@@ -1,17 +1,22 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.7.1" />
+    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.0" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\MyChy.Frame.Core.Common\MyChy.Frame.Core.Common.csproj" />
     <ProjectReference Include="..\MyChy.Frame.Core.EFCore\MyChy.Frame.Core.EFCore.csproj" />
     <ProjectReference Include="..\MyChy.Frame.Core.Redis\MyChy.Frame.Core.Redis.csproj" />
+    <ProjectReference Include="..\MyChy.Frame.Core\MyChy.Frame.Core.csproj" />
   </ItemGroup>
 
 </Project>
