--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <Version>1.0.5</Version>
-    <AssemblyVersion>1.0.5.0</AssemblyVersion>
-    <FileVersion>1.0.5.0</FileVersion>
-    <Description>升级Nuget引用</Description>
+    <Version>1.1.0</Version>
+    <AssemblyVersion>1.1.0.0</AssemblyVersion>
+    <FileVersion>1.1.0.0</FileVersion>
+    <Description>升级到.net core 2.0</Description>
   </PropertyGroup>
 
   <ItemGroup>
