--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core/MyChy.Frame.Core.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core/MyChy.Frame.Core.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <Version>1.1.2</Version>
-    <Description>更新ClaimsIdentityServer</Description>
-    <AssemblyVersion>1.1.2.0</AssemblyVersion>
-    <FileVersion>1.1.2.0</FileVersion>
+    <Version>1.1.4</Version>
+    <Description>CookiesServer 修复BUG</Description>
+    <AssemblyVersion>1.1.4.0</AssemblyVersion>
+    <FileVersion>1.1.4.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
