--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.EFCore/MyChy.Frame.Core.EFCore.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.EFCore/MyChy.Frame.Core.EFCore.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <Version>1.1.1</Version>
-    <Description>移除 IPageable 到Common</Description>
-    <AssemblyVersion>1.1.1.0</AssemblyVersion>
-    <FileVersion>1.1.1.0</FileVersion>
+    <Version>1.1.4</Version>
+    <Description>修复 QueryPage  BUG</Description>
+    <AssemblyVersion>1.1.4.0</AssemblyVersion>
+    <FileVersion>1.1.4.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
