--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.EFCore/MyChy.Frame.Core.EFCore.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.EFCore/MyChy.Frame.Core.EFCore.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.0</TargetFramework>
-    <Version>1.1.10</Version>
-    <Description>升级DLL到Core 2.0</Description>
-    <AssemblyVersion>1.1.10.0</AssemblyVersion>
-    <FileVersion>1.1.10.0</FileVersion>
+    <Version>1.2.0</Version>
+    <Description>优化代码,增加直接日志保存!去除冗余代码</Description>
+    <AssemblyVersion>1.2.0.0</AssemblyVersion>
+    <FileVersion>1.2.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
