--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Console/MyChy.Frame.Core.Console.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Console/MyChy.Frame.Core.Console.csproj
@@ -1,20 +1,15 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp2.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.8.1" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\MyChy.Frame.Core.Common\MyChy.Frame.Core.Common.csproj" />
     <ProjectReference Include="..\MyChy.Frame.Core.EFCore\MyChy.Frame.Core.EFCore.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Service Include="{82a7f48d-3b50-4b1e-b82e-3ada8210c358}" />
+    <ProjectReference Include="..\MyChy.Frame.Core.Test\MyChy.Frame.Core.Test.csproj" />
+    <ProjectReference Include="..\MyChy.Frame.Core\MyChy.Frame.Core.csproj" />
   </ItemGroup>
 
 </Project>
