--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web/appsettings.json
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web/appsettings.json
@@ -1,4 +1,11 @@
 ﻿{
+  "AppSettings": {
+    "AuthenticationLogin": "/login/login",
+    "CookieMachineKey": "config",
+    "ErrorUrl": "/Home/Error",
+    "StartupTask": false
+  },
+
   "Logging": {
     "IncludeScopes": false,
     "LogLevel": {
