--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web.csproj
@@ -29,6 +29,7 @@
   <ItemGroup>
     <ProjectReference Include="..\MyChy.Frame.Core.Common\MyChy.Frame.Core.Common.csproj" />
     <ProjectReference Include="..\MyChy.Frame.Core.EFCore\MyChy.Frame.Core.EFCore.csproj" />
+    <ProjectReference Include="..\MyChy.Frame.Core.Redis\MyChy.Frame.Core.Redis.csproj" />
     <ProjectReference Include="..\MyChy.Frame.Core\MyChy.Frame.Core.csproj" />
   </ItemGroup>
 
