--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Version>1.2.00</Version>
-    <AssemblyVersion>1.2.24.0</AssemblyVersion>
-    <FileVersion>1.2.00.0</FileVersion>
-    <Description>更新到.net Core 2.1</Description>
+    <Version>1.3.1</Version>
+    <AssemblyVersion>1.3.1.0</AssemblyVersion>
+    <FileVersion>1.3.1.0</FileVersion>
+    <Description>修复版本号错误</Description>
   </PropertyGroup>
 
   <ItemGroup>
