--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.EFCore/MyChy.Frame.Core.EFCore.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.EFCore/MyChy.Frame.Core.EFCore.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp2.1</TargetFramework>
-    <Version>1.3.1</Version>
-    <Description>修复BUG,增加自动记录表IP</Description>
-    <AssemblyVersion>1.3.1.0</AssemblyVersion>
-    <FileVersion>1.3.1.0</FileVersion>
+    <Version>1.4.1</Version>
+    <Description>从新引用DLL</Description>
+    <AssemblyVersion>1.4.1.0</AssemblyVersion>
+    <FileVersion>1.4.1.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
