--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Common/MyChy.Frame.Core.Common.csproj
@@ -2,10 +2,10 @@
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
-    <Version>3.1.0</Version>
-    <AssemblyVersion>3.1.0.0</AssemblyVersion>
+    <Version>3.1.1</Version>
+    <AssemblyVersion>3.1.1.0</AssemblyVersion>
     <FileVersion>3.1.0.0</FileVersion>
-    <Description>升级Core3.1</Description>
+    <Description>增加 XML序列化</Description>
   </PropertyGroup>
 
   <ItemGroup>
