修改BUG,修改NLog日志功能,增加缩微图功能

--- a/.gitignore
+++ b/.gitignore
@@ -259,3 +259,5 @@ paket-files/
 # Python Tools for Visual Studio (PTVS)
 __pycache__/
 *.pyc
+/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web3/wwwroot/Files/Picture
+/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web3/config/nlog2.config
