--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web3/config/nlog.config
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Web3/config/nlog.config
@@ -2,116 +2,39 @@
 <nlog xmlns="http://www.nlog-project.org/schemas/NLog.xsd"
       xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
       autoReload="true"
-      internalLogLevel="Warn"
+      throwConfigExceptions="true"
+      internalLogLevel="info"
       internalLogFile="AppData/Logs/NLogInternal.log">
 
-  <!-- define various log targets -->
-
+  <!-- enable asp.net core layout renderers -->
   <extensions>
-    <!--enable NLog.Web for ASP.NET Core-->
     <add assembly="NLog.Web.AspNetCore"/>
   </extensions>
-  
+
+  <!-- the targets to write to -->
   <targets>
-    <!--<default-wrapper xsi:type="BufferingWrapper" bufferSize="10"/>-->
-    <!-- 缓冲区10条写一次 -->
-    
-    <!--<target name="XXX.Entities.AppDbContext.DatabaseLog.Trace"
-             xsi:type="Trace"
-             layout="${message}"
-            />
-    --><!-- 在控制台输出由 EF 6 产生的数据库日志 --><!--
-    <target name="XXX.Entities.AppDbContext.DatabaseLog.Console"
-            xsi:type="Console"
-            layout="${message}"
-            />
-    --><!-- 在日志文件输出由 EF 6 产生的数据库日志 -->
-    <target name="XXX.Entities.AppDbContext.DatabaseLog.File"
-            xsi:type="File"
-            layout="${message}"
-            encoding="utf-8"
-            archiveNumbering="Date"
-            archiveEvery="Day"
-            archiveDateFormat="yyyy-MM-dd"
-            archiveFileName="AppData/Logs/Archives/XXX.Entities.AppDbContext.Database/{#}.log"
-            fileName="AppData/Logs/XXX.Entities.AppDbContext.Database.log"
-            />
-    <!-- -->
-    <!-- 常规的 Trace 输出，调试时可以在 VS 输出窗口看到 --><!--
-    <target name="TRACE"
-            xsi:type="Trace"
-            layout="[${longdate}] ${pad:padding=-5:inner=${level:uppercase=true}} ${logger}: ${newline}${message}${onexception:inner=${newline}${exception:format=ToString}}${newline}" />-->
-    <!-- 常规的控制台输出 -->
-    <target name="CONSOLE"
-            xsi:type="Console"
-            layout="[${longdate}] ${pad:padding=-5:inner=${level:uppercase=true}} ${logger}: ${newline}${message}${onexception:inner=${newline}${exception:format=ToString}}${newline}" />
+    <!-- write logs to file  -->
+    <target xsi:type="File" name="allfile" fileName="AppData/Logs/nlog-AspNetCore3-all-${shortdate}.log"
+            layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|${message} ${exception:format=tostring}" />
 
-    <!-- 常规的日志文件输出 -->
-    <target name="LOG_FILE"
-            xsi:type="File"
-            layout="[${longdate}] ${pad:padding=-5:inner=${level:uppercase=true}} ${logger}: ${newline}${message}${onexception:inner=${newline}${exception:format=ToString}}${newline}"
-            encoding="utf-8"
-            archiveNumbering="Date"
-            archiveEvery="Day"
-            archiveDateFormat="yyyy-MM-dd"
-            archiveFileName="AppData/Logs/Archives/${shortdate}/NLog-{#}.log"
-            fileName="AppData/Logs/${filesystem-normalize:inner=${logger}}.log" />
+    <!-- another file log, only own logs. Uses some ASP.NET core renderers -->
+    <target xsi:type="File" name="ownFile-web" fileName="AppData/Logs/nlog-${shortdate}.log"
+            layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}|${callsite}| body: ${aspnet-request-posted-body}| /n/r message: ${message} ${exception:format=tostring}" />
 
-    <!-- 约定以 err 为文件后缀的日志文件记录了程序输出的警告或者错误。 -->
-    <target name="ERROR_LOG_FILE"
-            xsi:type="File"
-            layout="[${longdate}] ${pad:padding=-5:inner=${level:uppercase=true}} ${logger}: ${newline}${message}${onexception:inner=${newline}${exception:format=ToString}}${newline}"
-            encoding="utf-8"
-            archiveNumbering="Date"
-            archiveEvery="Day"
-            archiveDateFormat="yyyy-MM-dd"
-            archiveFileName="AppData/Logs/Archives/${filesystem-normalize:inner=${logger}}/{#}.err.log"
-            fileName="AppData/Logs/${filesystem-normalize:inner=${logger}}.errerr.log" />
+    <target xsi:type="File" name="ownFile-mvc" fileName="AppData/Logs/nlog-${shortdate}.log"
+        layout="${longdate}|${event-properties:item=EventId_Id:whenEmpty=0}|${uppercase:${level}}|${logger}|action: ${aspnet-mvc-action}|${callsite}| body: ${aspnet-request-posted-body}| message: ${message} ${exception:format=tostring}" />
 
-
-    <!-- 常规的单文件日志文件输出 -->
-    <target name="LOG_OneFILE"
-            xsi:type="File"
-            layout="[${longdate}] ${pad:padding=-5:inner=${level:uppercase=true}} ${logger}: ${newline}${message}${onexception:inner=${newline}${exception:format=ToString}}${newline}"
-            encoding="utf-8"
-            archiveNumbering="Date"
-            archiveEvery="Day"
-            archiveDateFormat="yyyy-MM-dd"
-            archiveFileName="AppData/Logs/Archives/${shortdate}/NLog-{#}.log"
-            fileName="AppData/Logs/Info.log" />
-
-    <!--<target name="ERROR_Web_FILE"
-        xsi:type="File"
-        layout="${longdate}|${event-properties:item=EventId.Id}|${logger}|${uppercase:${level}}|  ${message} ${exception}|url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" 
-        encoding="utf-8"
-        archiveNumbering="Date"
-        archiveEvery="Day"
-        archiveDateFormat="yyyy-MM-dd"
-        archiveFileName="AppData/Logs/Archives/${filesystem-normalize:inner=${logger}}/{#}.err.log"
-        fileName="AppData/Logs/${filesystem-normalize:inner=${logger}}.Web.log" />-->
-
-    
   </targets>
 
+  <!-- rules to map from logger name to target -->
   <rules>
-    <!-- 记录所有日志级别不低于 Warn 的日志到日志文件 -->
-    <logger name="MyChy.*" minlevel="Warn" writeTo="ERROR_LOG_FILE" />
-    <logger name="MyChy.*" maxlevel="Info"  writeTo="LOG_OneFILE" />
-    
-    
-    <!-- 记录 EF 生成的 SQL 语句 -->
-    <logger name="XXX.Entities.AppDbContext.DatabaseLog" minlevel="Debug"
-            writeTo="XXX.Entities.AppDbContext.DatabaseLog.File" final="true" />
-    
-    <!-- 除非调试需要，把 .NET Core 程序集的 Debug 输出都屏蔽 -->
-  <!--  <logger name="Microsoft.*" minLevel="Info" writeTo="CONSOLE,LOG_FILE" final="true" />
-    -->
-    <!-- 除非调试需要，把系统的 Debug 输出都屏蔽 --><!--
-    <logger name="System.*" minLevel="Info" writeTo="CONSOLE,LOG_FILE" final="true" />
-    --><!-- 记录应用程序的 Debug 输出 -->
-  
+    <!--All logs, including from Microsoft-->
+    <!--<logger name="*" minlevel="Info" writeTo="allfile" />-->
+
+    <!--Skip non-critical Microsoft logs and so log only own logs-->
+    <logger name="Microsoft.*" maxlevel="Info" final="true" />
+    <!-- BlackHole -->
+
+    <logger name="*" minlevel="Warn" writeTo="ownFile-mvc" />
   </rules>
-
-
-  
 </nlog>
