--- a/MyChy.Frame.Core.Web/MyChy.Frame.Core.Redis/MyChy.Frame.Core.Redis.csproj
+++ b/MyChy.Frame.Core.Web/MyChy.Frame.Core.Redis/MyChy.Frame.Core.Redis.csproj
@@ -3,10 +3,10 @@
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-    <AssemblyVersion>3.1.0.0</AssemblyVersion>
-    <FileVersion>3.1.0.0</FileVersion>
-    <Version>3.1.0</Version>
-    <Description>升级Core3.1</Description>
+    <AssemblyVersion>3.1.2.0</AssemblyVersion>
+    <FileVersion>3.1.2.0</FileVersion>
+    <Version>3.1.2</Version>
+    <Description>增加释放当前项目所有缓存功能</Description>
   </PropertyGroup>
 
   <ItemGroup>
